RESOLVED FIXED88604
Layout Test pointer-lock/pointerlockchange-pointerlockerror-events.html is failing
https://bugs.webkit.org/show_bug.cgi?id=88604
Summary Layout Test pointer-lock/pointerlockchange-pointerlockerror-events.html is fa...
Ojan Vafai
Reported 2012-06-07 18:58:01 PDT
pointer-lock/pointerlockchange-pointerlockerror-events.html crashes on debug.
Attachments
Patch (3.09 KB, patch)
2012-06-07 20:18 PDT, Vincent Scheib
tkent: review+
Ojan Vafai
Comment 1 2012-06-07 18:58:49 PDT
Been crashing since it was added in http://trac.webkit.org/changeset/119763
Vincent Scheib
Comment 2 2012-06-07 20:18:20 PDT
Kent Tamura
Comment 3 2012-06-07 20:54:21 PDT
Comment on attachment 146462 [details] Patch ok
Vincent Scheib
Comment 4 2012-06-08 08:13:40 PDT
Note You need to log in before you can comment on or make changes to this bug.