Layout Test pointer-lock/pointerlockchange-pointerlockerror-events.html is failing https://bugs.webkit.org/show_bug.cgi?id=88604

Reviewed by Kent Tamura.

Tools:

DumpRenderTree fixed to not call didLosePointerLock if pointer is not currently locked.
Fixes debug only assert crash in pointer-lock/pointerlockchange-pointerlockerror-events.html test.

* DumpRenderTree/chromium/WebViewHost.cpp:
(WebViewHost::requestPointerUnlock):

LayoutTests:

Removed CRASH expectation.
Test is no longer crashing with this fix to DumpRenderTree.

* platform/chromium/TestExpectations:

Canonical link: https://commits.webkit.org/106468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119832 268f45cc-cd09-0410-ab3c-d52691b4dbfc